--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -14,7 +14,9 @@
   [Android 开发技术周报特刊之 React Native](https://www.androidweekly.io/android-dev-special-weekly-react-native-issue-0/)
 ```
 
+### 1.1.1. 实施
 
+* 1 月《React Native 移动开发实战》第 4、5、12 章读书笔记完成
 
 ## 1.2. Kotlin
 
@@ -31,6 +33,8 @@
   [Android 开发技术周报特刊之 Kotlin Issue 3](https://www.androidweekly.io/android-dev-special-weekly-kotlin-issue-3/)
 ```
 
+### 1.2.1. 实施
+
 
 
 ## 1.3. 架构
@@ -40,7 +44,9 @@
 视频：《高焕堂-Android 编程从程序员到架构师的高手之路》
 ```
 
+### 1.3.1. 实施
 
+* 1 月 第 1-10 视频学习
 
 ## 1.4. Android
 
@@ -49,7 +55,9 @@
 书籍：《Android 全埋点解决方案》、《Android 进阶解密》
 ```
 
+### 1.4.1. 实施
 
+* 1 月 《Android 全埋点解决方案》 第 1-3 章阅读
 
 ## 1.5. 编码
 
@@ -57,6 +65,8 @@
 5. 编码
 书籍：《代码整洁之道》
 ```
+
+### 1.5.1. 实施
 
 
 
@@ -70,7 +80,7 @@
 ### 1.6.1. 实施
 
 * 1 月 《思维导图完整手册》阅读完毕
-* 
+* 1 月 《思维导图完整手册》读书笔记完成
 
 # 2. 生活
 
