--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -82,6 +82,11 @@
 * 1 月 《思维导图完整手册》阅读完毕
 * 1 月 《思维导图完整手册》读书笔记完成
 
+## 1.7. 技术文章输出
+
+* 1月 [Android 编码规范](https://github.com/ZhangMiao147/android_learning_notes/tree/master/Android/Android编码规范)
+* 
+
 # 2. 生活
 
 ## 2.1. 锻炼
