--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -16,7 +16,7 @@
 
 ### 1.1.1. 实施
 
-* 1 月《React Native 移动开发实战》第 4、5、12 章读书笔记完成
+* 1 月《React Native 移动开发实战》第 4、5、6、12 章读书笔记完成
 
 ## 1.2. Kotlin
 
@@ -46,7 +46,7 @@
 
 ### 1.3.1. 实施
 
-* 1 月 第 1-10 视频学习
+* 1 月 第 1-17 视频学习
 
 ## 1.4. Android
 
@@ -57,7 +57,8 @@
 
 ### 1.4.1. 实施
 
-* 1 月 《Android 全埋点解决方案》 第 1-3 章阅读
+* 1 月 《Android 全埋点解决方案》 第 1-7 章阅读
+* 1 月 《Android 全埋点解决方案》第 7 章读书笔记
 
 ## 1.5. 编码
 
@@ -79,8 +80,9 @@
 
 ### 1.6.1. 实施
 
-* 1 月 《思维导图完整手册》阅读完毕
-* 1 月 《思维导图完整手册》读书笔记完成
+* 1 月 [思维导图完整手册](https://github.com/ZhangMiao147/android_learning_notes/blob/master/BookNote/非技术书籍/思维导图完整手册.md)
+
+  
 
 ## 1.7. 技术文章输出
 
