--- a/BookNote/React Native 移动开发实战/第8章-网络与通信.md
+++ b/BookNote/React Native 移动开发实战/第8章-网络与通信.md
@@ -1,4 +1,100 @@
 # 第 8 章 网络与通信
 
-　　React Native
+## 8.1. 网络请求
 
+### 8.1.1. XMLHTTPRequest
+
+​		XMLHTTP 是由微软公司开源的一组 API 函数集，可被 JavaScript、VBScript 以及其他 Web 浏览器内嵌的脚本语言调用，并通过 HTTP 在浏览器和 Web 服务器之间收发 XML 或其他数据。XMLHTTP 最大的优势在于可以动态地更新网页，无须重新从服务器读取整个网页，也不需要安装额外的插件，就可以完成网页的局部更新。
+
+​		XMLHTTP 是 AJAX 网页开发技术的重要组成部分。除了支持 XML 格式之外，XMLHTTP 还支持其他格式的数据，如 JSON 或纯文本。XMLHttpRequest 则可以向服务器发送请求并接收数据，是用于在后台与服务器交换数据的对象。
+
+​		XMLHttpRequest 对象提供了完全访问 HTTP 的能力，开发者可以使用它实现 POST 和 GET 请求。XMLHttpRequest 可以同步或异步地返回 Web 服务器的响应，并且能够以文本或者 DOM 文档的方式返回响应数据。
+
+​		作为 AJAX 技术的核心，XMLHTTP 最大的优点就是可以动态地更新网页。不过随着网络请求越来越复杂，XMLHTTP 也将面对越来大的挑战，甚至将被新的请求方式所代替。
+
+### 8.1.2. fetch
+
+​		在现代 Web 项目开发过程中，前端页面向服务器请求数据基本上都是通过 AJAX 技术来实现的。不过在传统的 AJAX 技术中，XMLHttpRequest 对象通过事件的模式来处理返回数据。但是 XMLHttpRequest 并不符合分离原则，其配置和调用也非常混乱，而 fetch 就是一种可以简化 XMLHttpRequest 网络请求操作的 API。
+
+​		fetch 使用 Promise 方式回调请求结果。Promise 是 ES6 的核心内容之一，可以有效地解决多层级链式调用问题。目前，几乎所有的现代浏览器都支持 fetch 请求。
+
+​		fetch 提供了一个获取网络资源的接口，可以方便开发者快速地获取服务器资源，并且支持跨域请求。相比 XMLHttpRequest，fetch 提供了更加强大且更灵活的功能集，可以帮助开发者快速地完成网络数据交互。
+
+### 8.1.3. async-await
+
+​		众所周知，JavaScript 语言的执行环境是单线程的，如果要进行异步操作，通常有 4 种方式，即回调函数、事件监听、发布/订阅和 Promise 对象。不过，ES7 引入了 async 函数，让 JavaScript 对于异步操作有了终极的解决方案。
+
+​		事实上，async 函数主要由两部分构成，即 async 和 await。async-await 是 generator 函数的语法糖，async 函数使用 async 关键字进行标识，函数内部使用 await 来表示异步。相较于普通的 generator 语法，async 函数对以下 4 点进行了改进。
+
+* 内置执行器：generator 函数的执行必须依靠执行器，而 aysnc 函数自带执行器，调用方式跟普通函数的调用一样。
+* 更好的语义：async、await 相较于 * 和 yield 操作更加语义化。
+* 更广的适用性：co 模块约定，yield 命令后面只能是 thunk 函数或 Promise 对象，而 async 函数的 await 命令后面则可以是 Promise 或者原始类型的值。
+* 返回值为 Promise：async 函数的返回值是 Promise 对象，比 generator 函数返回的 iterator 对象方便，可以直接使用 then 函数调用返回的结果。
+
+​		async 函数使用 async 关键字进行修饰，函数内部使用 await 来表示异步，并最终返回一个 Promise 对象。同时， async 函数返回的值会成为 then() 方法回调函数的参数。
+
+​		通常，async 函数返回的值就是 Promise 对象执行 resolve 操作的值，如果 async 函数内部出现异常，则会导致返回 Promise 对象时状态变为 reject。
+
+​		await 操作符会暂停 async 函数的执行，直到 Promise 返回计算结果以后才会继续执行 async 函数。await 必须出现在 async 函数内部，不能单独使用。
+
+## 8.2. Promise
+
+​		在 JavaScript 的世界中，所有代码都是单线程执行的，这是因为 JavaScript 主要的运用场景是浏览器，浏览器本身是典型的 GUI 工作线程。GUI 工作线程在绝大多数系统中都被实现为事件处理。为了避免造成线程阻塞，JavaScript 被设计成单线程工作方式。
+
+​		所谓单线程，是指一个浏览器进程中只有一个执行线程，同一时刻内只会有一段代码被执行。因为这一特性，导致 JavaScript 的所有网络操作、浏览器事件都必须是异步执行的。异步执行可以使用回调函数实现。
+
+​		异步操作就是在将来的某个时间点触发某个函数的调用，并得到某个结果。不过，通过回调函数实现异步操作有一个很致命的问题，即多层回调函数的嵌套问题。
+
+​		为了解决回调函数多层嵌套的问题，ES6 引入了 Promise 机制。它通过将异步操作以同步操作的方式表达出来，从而避免回调函数层层嵌套的问题。同时，Promise 提供的统一接口，也让异步操作变得更加容易。
+
+​		Promise 对象用于表示一个异步操作的最终状态以及返回值。
+
+​		在 Promise 机制中，Promise 作为一个代理对象，被代理的值在 Promise 对象创建时可能是未知的。同时，它需要开发者在异步操作成功或失败后绑定相应的处理方法，并且异步方法并不会立即返回最终的执行结果，而是返回一个能代表未来结果的 Promise 对象。
+
+​		Promise 对象通常有 3 种状态，分别是 pending、fulfilled 和 rejected。
+
+* pending：初始状态，既不是成功也不是失败状态。
+* fulfilled：操作成功。
+* rejected：操作失败。
+
+​		初始状态的 Promise 对象可能会变为成功状态并传递一个值给相应的状态处理方法，也可能变为失败状态并传递失败信息。当其中任一种情况出现时，Promise 对象的 then() 方法绑定的处理方法就会被调用。then() 方法通常会包含两个参数，即 onfulfilled 和 onrejected。
+
+​		当 Promise 的状态变成完成时，会调用 then 的 onfulfilled() 方法，当 Promise 状态为失败时，则调用 then 的 onrejected() 方法，所以在异步操作的完成和绑定处理方法之间不存在任何竞争。
+
+​		由下图可知，在 Promise 状态的转换过程中，初始状态可以转化为成功状态或失败状态，但是成功状态和失败状态却不能相互转换。
+
+![epub_31403502_102](https://res.weread.qq.com/wrepub/epub_31403502_102)
+
+​		尽管 Promise 能很好地实现异步操作，但也不是万能的。例如，Promise 对象在被执行的过程中是无法取消的，并且如果不设置回调函数，Promise 在执行异步操作时内部还会报错。
+
+## 8.3. 与原生交互
+
+​		所谓混合开发，就是 React Native 的 JavaScript 层与原生客户端相互调用的过程。而相互调用就避免不了相互通信的问题，React Native 开发中所指的通信，主要是 JavaScript 层与原生客户端之间的方法调用和数据传递。
+
+### 8.3.1. 与原生 Android 交互
+
+​		当需要在 React Native 中调用某个原生模块函数时，可以通过将原生代码封装成可供 React Native 调用的中间件，提供相应的 API 供 React Native 的 JavaScript 层调用。
+
+​		通常，React Native 的 JavaScript 层调用原生代码模块包含以下几个步骤。
+
+* 在 Android 项目中通过原生代码实现提供相应的原生功能。
+* 在 Android 项目中注册编写好的功能模块。
+* 在 React Native 项目中使用 JavaScript 代码调用 Android 平台功能。
+
+​		在 JavaScript 与原生模块的交互中，除了基本的数据类型外，React Native 还支持 ReadableMap 和 WritableMap。其中，ReadableMap 用于 JavaScript 向原生模块传值，而 WritableMap 一般用于从原生模块获取传递过来的数据。
+
+### 8.3.2. 与原生 iOS 交互
+
+​		相比于 Android 平台，React Native 的 JavaScript 层与 iOS 原生模块之间的交互就要简单许多。具体来说，只需要在原生 iOS 工程中创建一个 Module 类并实现 RCTBridgeModule 协议即可。
+
+​		除了基本的数据类型，React Native 的 JavaScript 模块与 iOS 原生模块的交互还支持字典和数组类型。
+
+### 8.3.3. 事件交互
+
+​		除了主动调用原生模态暴露的方法外，React Native 还支持使用事件监听的方式来进行数据传递。
+
+​		使用事件监听方式接收原生平台传递过来的数据方面， Android 使用的是 DeviceEventEmitter，iOS 则使用的是 NativeEventEmitter。
+
+## 8.4. 本章小结
+
+​		在前端应用开发中，网络与通信是一个重要的课题，前端基本上只负责数据展示和基本的交互，对于复杂的运算逻辑则由服务器端实现。在前后端分离的架构思想下，通过网络实现前后端数据的交互就显得尤为重要。
