架构师笔记

--- a/plan/计划/2020年计划.md
+++ b/plan/计划/2020年计划.md
@@ -7,7 +7,7 @@
 1. 《 代码整洁之道 》
 2. 《 程序员修炼之道 》
 3. 《 深入理解 Android 卷一 》
-4. 《 图解 HTTP 》
+4. 《 图解 HTTP 》-已完成
 5. 《 Android 开发艺术探索 》
 6. 《 Android 进阶之光 》
 7. 《 Android 进阶解密 》
@@ -204,11 +204,11 @@
 
 ### 2020 年 11 月
 
-1. 《React Native》第 1-2章完成
+1. 《React Native 移动开发实战》第 1-2章完成
 
 ### 20202 年 12 月
 
-1. 《React Native》阅读完毕
+1. 《React Native 移动开发实战》阅读完毕
 2. 《思维导图完整手册》第一章
 3. 《图解 HTTP 》读书笔记完成
 
