--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -9,14 +9,14 @@
 * 视频
   《React Native 视频教程-项目实战》
 * 书籍
-  《React Native 移动开发实战》
+  《React Native 移动开发实战》- 完成
 * 网址
   [Android 开发技术周报特刊之 React Native](https://www.androidweekly.io/android-dev-special-weekly-react-native-issue-0/)
 ```
 
 ### 1.1.1. 实施
 
-* 1 月《React Native 移动开发实战》第 4、5、6、12 章读书笔记完成
+* 1 月《React Native 移动开发实战》第 4、5、6、7、8、9、10、11、12 章读书笔记完成
 
 ## 1.2. Kotlin
 
@@ -46,18 +46,19 @@
 
 ### 1.3.1. 实施
 
-* 1 月 第 1-17 视频学习
+* 1 月 第 1-21 视频学习
 
 ## 1.4. Android
 
 ```java
 4. Android
-书籍：《Android 全埋点解决方案》、《Android 进阶解密》
+书籍：《Android 全埋点解决方案》
+     《Android 进阶解密》
 ```
 
 ### 1.4.1. 实施
 
-* 1 月 《Android 全埋点解决方案》 第 1-7 章阅读
+* 1 月 《Android 全埋点解决方案》 第 1-8 章阅读
 * 1 月 《Android 全埋点解决方案》第 7 章读书笔记
 
 ## 1.5. 编码
@@ -75,7 +76,7 @@
 
 ```java
 6. 其他
-书籍：《思维导图完整手册》
+书籍：《思维导图完整手册》- 完成
 ```
 
 ### 1.6.1. 实施
