架构学习记录

--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -46,7 +46,8 @@
 
 ### 1.3.1. 实施
 
-* 1 月 第 1-21 视频学习
+* 1 月 第 1-25 视频学习
+* 2 月 第 视频学习
 
 ## 1.4. Android
 
@@ -60,6 +61,7 @@
 
 * 1 月 《Android 全埋点解决方案》 第 1-8 章阅读
 * 1 月 《Android 全埋点解决方案》第 7 章读书笔记
+* 2 月 《Android 全埋点解决方案》第  章阅读
 
 ## 1.5. 编码
 
@@ -101,8 +103,8 @@
 
 ### 2.1.1. 实施
 
-* 1 月
-* 2 月
+* 1 月 14 次，健身房 12 次，自行 2 次，1 月 21 号停操课，完成 8%
+* 2 月 次，健身房 0 次，自行 次，健身房放假。
 * 3 月
 * 4 月
 * 5 月
@@ -123,8 +125,8 @@
 
 ### 2.2.1. 实施
 
-* 1 月
-* 2 月
+* 1 月 2 张，未达标，完成 3%
+* 2 月 张
 * 3 月
 * 4 月
 * 5 月
