--- a/BookNote/Android全埋点解决方案/第1章-全埋点概述.md
+++ b/BookNote/Android全埋点解决方案/第1章-全埋点概述.md
@@ -1,16 +1,16 @@
 # 第1章 全埋点概述
 
-## 推荐序
+# 推荐序
 
 ​		为了实现对数据的采集，可以有三种方式：代码埋点、工具导入和全埋点。	
 
-**这三种方式都是手段，并且各有优缺点，选择时需要完全基于实际的业务需求和现状来设计，而不能一味地追求某一种方式，如果把全埋点当成必杀技，那就大错特错了。**
+​		这三种方式都是手段，并且各有优缺点，选择时需要完全基于实际的业务需求和现状来设计，而不能一味地追求某一种方式，如果把全埋点当成必杀技，那就大错特错了。
 
-**由于自动收集的本质是对所有操作进行拦截，相比于代码埋点只是采集的一部分必要操作，显然利用自动收集的方式收集的操作类型更全面，因此我们将它命名为全埋点，而不是无埋点。**
+​		由于自动收集的本质是对所有操作进行拦截，相比于代码埋点只是采集的一部分必要操作，显然利用自动收集的方式收集的操作类型更全面，因此我们将它命名为全埋点，而不是无埋点。
 
-## 第1章 全埋点概述
+# 第 1 章 全埋点概述
 
-**全埋点，也叫无埋点、无码埋点、无痕埋点、自动埋点。全埋点是指无须Android应用程序开发工程师写代码或者只写少量的代码，就能预先自动收集用户的所有行为数据，然后就可以根据实际的业务分析需求从中筛选出所需行为数据并进行分析。**
+​		全埋点，也叫无埋点、无码埋点、无痕埋点、自动埋点。全埋点是指无须Android应用程序开发工程师写代码或者只写少量的代码，就能预先自动收集用户的所有行为数据，然后就可以根据实际的业务分析需求从中筛选出所需行为数据并进行分析。
 
 **全埋点采集的事件目前主要包括以下四种（事件名称前面的$符号，是指该事件是预置事件，与之对应的是自定义事件）。**
 
