--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -48,7 +48,8 @@
 ### 1.3.1. 实施
 
 * 1 月 第 1-25 视频学习
-* 2 月 第 26-71 视频学习
+* 2 月 第 26-91 视频学习
+* 3 月
 
 ## 1.4. Android
 
@@ -62,7 +63,9 @@
 
 * 1 月 《Android 全埋点解决方案》 第 1-8 章阅读
 * 1 月 《Android 全埋点解决方案》第 7 章读书笔记
-* 2 月 《Android 全埋点解决方案》第 9-10 章阅读
+* 2 月 《Android 全埋点解决方案》第 9-11 章阅读 -- 阅读已完成
+* 2 月 《Android 全埋点解决方案》第 8-10 章读书笔记
+* 3 月
 
 ## 1.5. 编码
 
@@ -80,11 +83,16 @@
 ```java
 6. 其他
 书籍：《思维导图完整手册》- 完成
+  	 《指数基金投资指南》
 ```
 
 ### 1.6.1. 实施
 
 * 1 月 [思维导图完整手册](https://github.com/ZhangMiao147/android_learning_notes/blob/master/BookNote/非技术书籍/思维导图完整手册.md)
+
+* 2 月 《指数基金投资指南》第 1 章
+
+* 3 月
 
   
 
@@ -105,7 +113,7 @@
 ### 2.1.1. 实施
 
 * 1 月 14 次，健身房 12 次，自行 2 次，健身房 1 月 21 号停操课。
-* 2 月 3 次，健身房 0 次，自行 3 次，健身房放假。
+* 2 月 10 次，健身房 2 次，自行 8 次，健身房 2 月 27 号恢复操课。
 * 3 月
 * 4 月
 * 5 月
@@ -127,7 +135,7 @@
 ### 2.2.1. 实施
 
 * 1 月 2 张，未达标，总量完成 3%
-* 2 月 张
+* 2 月 0 张，未达标。
 * 3 月
 * 4 月
 * 5 月
