全埋点读书笔记

--- a/BookNote/Android全埋点解决方案/第1章-全埋点概述.md
+++ b/BookNote/Android全埋点解决方案/第1章-全埋点概述.md
@@ -12,86 +12,144 @@
 
 ​		全埋点，也叫无埋点、无码埋点、无痕埋点、自动埋点。全埋点是指无须Android应用程序开发工程师写代码或者只写少量的代码，就能预先自动收集用户的所有行为数据，然后就可以根据实际的业务分析需求从中筛选出所需行为数据并进行分析。
 
-**全埋点采集的事件目前主要包括以下四种（事件名称前面的$符号，是指该事件是预置事件，与之对应的是自定义事件）。**
+​		全埋点采集的事件目前主要包括以下四种（事件名称前面的$符号，是指该事件是预置事件，与之对应的是自定义事件）。
 
-**·$AppStart事件是指应用程序启动，同时包括冷启动和热启动场景。热启动也就是指应用程序从后台恢复的情况。·$AppEnd事件是指应用程序退出，包括应用程序的正常退出、按Home键进入后台、应用程序被强杀、应用程序崩溃等场景。·$AppViewScreen事件是指应用程序页面浏览，对于Android应用程序来说，就是指切换Activity或Fragment。·$AppClick事件是指应用程序控件点击，也即View被点击，比如点击Button、ListView等。**
+* $AppStart事件
 
-**在采集的这四种事件当中，最重要并且采集难度最大的是$AppClick事件。所以，全埋点的解决方案基本上也都是围绕着如何采集$AppClick事件来进行的。**
+  是指应用程序启动，同时包括冷启动和热启动场景。热启动也就是指应用程序从后台恢复的情况。
 
-**对于$AppClick事件的全埋点整体解决思路，归根结底，就是要自动找到那个被点击的控件处理逻辑（后文统称原处理逻辑），然后再利用一定的技术原理，对原处理逻辑进行“拦截”，或者在原处理逻辑的执行前面或执行者后面“插入”相应的埋点代码逻辑，从而达到自动埋点的效果。**
+* $AppEnd事件
 
-**至于如何做到自动“拦截”控件的原处理逻辑，一般都是参考Android系统的事件处理机制来进行的。**
+  是指应用程序退出，包括应用程序的正常退出、按 Home 键进入后台、应用程序被强杀、应用程序崩溃等场景。
 
-**至于如何做到自动“插入”埋点代码逻辑，基本上都是参考编译器对Java代码的整体处理流程来进行的，即：JavaCode --> .java --> .class --> .dex**
+* $AppViewScreen事件
 
-**选择在不同的处理阶段“插入”埋点代码，所采用的技术或者原理也不尽相同，所以全埋点的解决方案也是多种多样的。**
+  是指应用程序页面浏览，对于 Android 应用程序来说，就是指切换 Activity 或 Fragment。
 
-**在选择全埋点的解决方案时，我们需要从效率、兼容性、扩展性等方面进行综合考虑。**
+* $AppClick事件
 
-**全埋点的基本原理，如上所述，其实就是利用某些技术对某些方法（控件被点击时的处理逻辑）进行拦截（或者叫代理）或者“插入”相关埋点代码。**
+  是指应用程序控件点击，也即 View 被点击，比如点击 Button、ListView 等。
 
-**按照“在什么时候去代理或者插入代码”这个条件来区分的话，$AppClick事件的全埋点技术可以大致分为如下两种方式。**
+​		在采集的这四种事件当中，最重要并且采集难度最大的是 $AppClick 事件。所以，全埋点的解决方案基本上也都是围绕着如何采集 $AppClick 事件来进行的。
 
-**·静态代理所谓静态代理，就是指通过Gradle Plugin在应用程序编译期间“插入”代码或者修改代码（.class文件）**
+​		对于 $AppClick 事件的全埋点整体解决思路，归根结底，就是要自动找到那个被点击的控件处理逻辑（后文统称原处理逻辑），然后再利用一定的技术原理，对原处理逻辑进行 “拦截”，或者在原处理逻辑的执行前面或执行者后面 “插入” 相应的埋点代码逻辑，从而达到自动埋点的效果。
 
-**比如AspectJ、ASM、Javassist、AST等方案均属于这种方式。**
+​		至于如何做到自动 “拦截” 控件的原处理逻辑，一般都是参考 Android 系统的事件处理机制来进行的。
 
-**这几种方式处理的时机可以参考图1-1。**
+​		至于如何做到自动 “插入” 埋点代码逻辑，基本上都是参考编译器对 Java 代码的整体处理流程来进行的，即：
 
-**所谓动态代理，就是指在代码运行的时候（Runtime）去进行代理。比如我们比较常见的代理View.OnClickListener、Window.Callback、View.AccessibilityDelegate等方案均属于这种方式。**
+```
+JavaCode --> .java --> .class --> .dex
+```
 
-**不同的方案，其处理能力和运行效率各不相同，同时对应用程序的侵入程度以及对应用程序的整体性能的影响也各不相同。从总体上来说，静态代理明显优于动态代理，这是因为静态代理的“动作”是在应用程序的编译阶段处理的，不会对应用程序的整体性能有太大的影响，而动态代理的“动作”是在应用程序运行阶段发生的（也即Runtime），所以会对应用程序的整体性能有一定的影响。**
+​		选择在不同的处理阶段 “插入” 埋点代码，所采用的技术或者原理也不尽相同，所以全埋点的解决方案也是多种多样的。
 
-**随着Android生态系统的快速发展，不管是Android系统本身，还是与Android应用程序开发相关的组件和技术，都在飞速发展和快速迭代，从而也给我们研发全埋点方案带来一定的难度。**
+​		在选择全埋点的解决方案时，我们需要从效率、兼容性、扩展性等方面进行综合考虑。
 
-**随着业务的快速发展和对数据分析需求的不断提高，对使用全埋点进行数据采集，也提出了更高的要求。一方面要求可以全部自动采集（采集的范围），同时又要求能有更精细化的采集控制粒度（采集可以自定义）。**
+* 效率
 
-**任何一种全埋点的技术方案，都有优点和缺点，没有一种普适的完美解决方案。我们只需要针对不同的应用场景，选择最合适的数据采集方案即可。能满足实际数据采集需求的方案，才是最优的方案。**
+  全埋点的基本原理，如上所述，其实就是利用某些技术对某些方法（控件被点击时的处理逻辑）进行拦截（或者叫代理）或者 “插入” 相关埋点代码。
 
-### 1.1 Android View类型
+  按照 “在什么时候去代理或者插入代码” 这个条件来区分的话，$AppClick事件的全埋点技术可以大致分为如下两种方式。
 
-**在Android系统中，控件（View）的类型非常丰富。分类方式也是多种多样的。我们根据控件设置的监听器（listener）的不同，可以大致将控件分为如下几类。·Button、CheckedTextView、TextView、ImageButton、ImageView等为这些控件设置的listener均是android.view.View.OnClickListener。**
+  * 静态代理
 
-**SeekBar设置的listener是android.widget.SeekBar.OnSeekBarChangeListener**
+    所谓静态代理，就是指通过 Gradle Plugin 在应用程序编译期间 “插入” 代码或者修改代码（.class文件）
 
-**TabHost设置的listener是android.widget.TabHost.OnTabChangeListener**
+    比如AspectJ、ASM、Javassist、AST等方案均属于这种方式。
 
-**RatingBar设置的listerner是android.widget.RatingBar.OnRatingBarChangeListener**
+    这几种方式处理的时机可以参考下图。
 
-**CheckBox、SwitchCompat、RadioButton、ToggleButton、RadioGroup等这些View属于同一种类型，它们都是属于带有“状态”的按钮，它们设置的listener均是CompoundButton.OnCheckedChangeListener。**
+    ![epub_25123578_2](https://res.weread.qq.com/wrepub/epub_25123578_2)
 
-**Spinner设置的listener是android.widget.AdapterView.OnItemSelectedListener**
+  * 动态代理
 
-**主要是通过重写Activity的相关方法（onOptionsItemSelected、onContextItemSelected）来设置listener**
+    所谓动态代理，就是指在代码运行的时候（Runtime）去进行代理。比如我们比较常见的代理View.OnClickListener、Window.Callback、View.AccessibilityDelegate 等方案均属于这种方式。
 
-**ListView和GridView都是AdapterView的子类，显示的内容都是一个“集合”。它们设置的listener均是android.widget.AdapterView.OnItemClickListener**
+  不同的方案，其处理能力和运行效率各不相同，同时对应用程序的侵入程度以及对应用程序的整体性能的影响也各不相同。从总体上来说，静态代理明显优于动态代理，这是因为静态代理的 “动作” 是在应用程序的编译阶段处理的，不会对应用程序的整体性能有太大的影响，而动态代理的 “动作” 是在应用程序运行阶段发生的（也即Runtime），所以会对应用程序的整体性能有一定的影响。
 
-**ExpandableListView也是AdapterView的子类，同时也是ListView的子类。它的点击分为ChildClick和GroupClick两种情况，所以，它设置的listener也是分为两种情况，即：android.widget.ExpandableListView.OnChildClickListener和android.widget.ExpandableList-View.OnGroupClickListener**
+* 兼容性
 
-**还有一种是显示列表的Dialog，它设置的listener是android.content.DialogInterface.OnMultiChoiceClickListener，**
+  随着 Android 生态系统的快速发展，不管是 Android 系统本身，还是与 Android 应用程序开发相关的组件和技术，都在飞速发展和快速迭代，从而也给我们研发全埋点方案带来一定的难度。
 
-### 1.2 View绑定listener方式
+* 扩展性
 
-**随着Android相关技术的不断更新迭代，给View绑定listener的方式也是多种多样的。**
+  随着业务的快速发展和对数据分析需求的不断提高，对使用全埋点进行数据采集，也提出了更高的要求。一方面要求可以全部自动采集（采集的范围），同时又要求能有更精细化的采集控制粒度（采集可以自定义）。
 
-**比较常见的几种绑定listener的方式。**
+​		任何一种全埋点的技术方案，都有优点和缺点，没有一种普适的完美解决方案。我们只需要针对不同的应用场景，选择最合适的数据采集方案即可。能满足实际数据采集需求的方案，才是最优的方案。
 
-**通过代码来设置listener**
+## 1.1. Android View 类型
 
-**这种方式是目前开发中最常用的方式，也是我们全埋点方案需要重点解决和重点支持的方式。**
+​		在 Android 系统中，控件（View）的类型非常丰富。分类方式也是多种多样的。我们根据控件设置的监听器（listener）的不同，可以大致将控件分为如下几类。
 
-**通过android：onClick属性绑定listener**
+* Button、CheckedTextView、TextView、ImageButton、ImageView 等
 
-**先在布局文件中声明Button的android：onClick属性，**
+  为这些控件设置的 listener 均是android.view.View.OnClickListener。
 
-**该方法必须有且仅有一个View类型的参数。**
+* SeekBar
 
-**这种方式在一些新的项目中不是很常见，在一些比较老的Android项目中可能会有这样大量的使用方式。**
+  SeekBar 设置的 listener 是android.widget.SeekBar.OnSeekBarChangeListener。
 
-**通过注解绑定listener目前有很多第三方的库都提供了类似的功能，**
+* TabHost
 
-**listener含有Lambda语法Lambda是Java8开始支持的，**
+  TabHost 设置的 listener 是android.widget.TabHost.OnTabChangeListener。
 
-**通过DataBinding绑定listener**
+* RatingBar
 
-**由于全埋点重点解决的是控件的点击行为数据，所以了解控件都能设置哪些listener，以及设置或者绑定listener的不同方式，对于我们研究或者选择全埋点的方案，都会有非常大的帮助。**
+  RatingBar 设置的 listerner 是android.widget.RatingBar.OnRatingBarChangeListener。
+
+* CheckBox、SwitchCompat、RadioButton、ToggleButton、RadioGroup 等
+
+  这些 View 属于同一种类型，它们都是属于带有 “状态” 的按钮，它们设置的 listener 均是CompoundButton.OnCheckedChangeListener。
+
+* Spinner
+
+  Spinner 设置的 listener 是 android.widget.AdapterView.OnItemSelectedListener。
+
+* MenuItem
+
+  ​	主要是通过重写 Activity 的相关方法（onOptionsItemSelected、onContextItemSelected）来设置 listener。
+
+* ListView、GridView
+
+  ListView 和 GridView 都是 AdapterView 的子类，显示的内容都是一个 “集合”。它们设置的 listener 均是 android.widget.AdapterView.OnItemClickListener。
+
+* ExpandableListView
+
+  ExpandableListView 也是 AdapterView 的子类，同时也是 ListView 的子类。它的点击分为 ChildClick 和 GroupClick 两种情况，所以，它设置的 listener 也是分为两种情况，即： android.widget.ExpandableListView.OnChildClickListener 和 android.widget.ExpandableList-View.OnGroupClickListener。
+
+* Dialog
+
+  Dialog 设置的 listener 分为两种情况。对于常见的普通Dialog，设置的 listener 是 android.content.DialogInterface.OnClickListener。
+
+  还有一种是显示列表的 Dialog，它设置的 listener 是 android.content.DialogInterface.OnMultiChoiceClickListener。
+
+## 1.2. View 绑定 listener 方式
+
+​		随着 Android 相关技术的不断更新迭代，给 View 绑定 listener 的方式也是多种多样的。
+
+​		比较常见的几种绑定 listener 的方式。
+
+* 通过代码来设置 listener
+
+  ​	这种方式是目前开发中最常用的方式，也是我们全埋点方案需要重点解决和重点支持的方式。
+
+* 通过 android：onClick 属性绑定 listener
+
+  先在布局文件中声明 Button 的 android：onClick 属性。
+
+  注意：该方法必须有且仅有一个 View 类型的参数。
+
+  这种方式在一些新的项目中不是很常见，在一些比较老的 Android 项目中可能会有这样大量的使用方式。
+
+* 通过注解绑定listener
+
+  目前有很多第三方的库都提供了类似的功能。
+
+* listener 含有 Lambda 语法
+
+  Lambda 是 Java8 开始支持的。
+
+* 通过 DataBinding 绑定 listener
+
+​		由于全埋点重点解决的是控件的点击行为数据，所以了解控件都能设置哪些 listener，以及设置或者绑定 listener 的不同方式，对于我们研究或者选择全埋点的方案，都会有非常大的帮助。
